--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,5 @@
 /GithubAction/DWH_ETL/DWH_ETL.sqlproj
 /GithubAction/DWH_ETL/DWH_ETL.sqlproj.user
 /GithubAction/DWH_Staging/bin/Debug
+/GithubAction/DWH_ETL/DWH_ETL.dbmdl
+/GithubAction/DWH_ETL/DWH_ETL.jfm
