--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,5 @@
 /GithubAction/DWH_Staging/bin/Debug
 /GithubAction/DWH_ETL/DWH_ETL.dbmdl
 /GithubAction/DWH_ETL/DWH_ETL.jfm
+/GithubAction/DWH_Staging/DWH_Staging.refactorlog
+/.gitignore
