--- a/.github/workflows/sqlproj-staging.yml
+++ b/.github/workflows/sqlproj-staging.yml
@@ -17,7 +17,7 @@ jobs:
         dotnet-version: 8.0.x
 
     - name: Build
-      run: dotnet build GithubAction/DWH_Staging/DWH_Staging.sqlproj
+      run:  msbuild GithubAction/DWH_Staging/DWH_Staging.sqlproj
 
     - name: Deploy
       uses: azure/sql-action@v2
