--- a/.github/workflows/sqlproj-staging.yml
+++ b/.github/workflows/sqlproj-staging.yml
@@ -6,18 +6,17 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     steps:
     - uses: actions/checkout@v4
 
-    - name: Setup .NET
-      uses: actions/setup-dotnet@v4
-      with:
-        dotnet-version: 8.0.x
+    - name: Setup MSBuild
+      uses: microsoft/setup-msbuild@v2
 
-    - name: Build
-      run:  msbuild GithubAction/DWH_Staging/DWH_Staging.sqlproj
+
+    - name: Build SSDT project
+      run:  msbuild "GithubAction/DWH_Staging/DWH_Staging.sqlproj" /t:Build /p:Configuration=Release
 
     - name: Deploy
       uses: azure/sql-action@v2
