--- a/.github/workflows/deploy_DWH_Staging.yml
+++ b/.github/workflows/deploy_DWH_Staging.yml
@@ -29,6 +29,8 @@ jobs:
           "GithubAction\DWH_Staging\DWH_Staging.sqlproj" `
           /t:Build `
           /p:Configuration=Release
+          & "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\MSBuild\Current\Bin\MSBuild.exe" `
+          "GithubAction\DWH_ETL\DWH_ETL.sqlproj" /t:Build /p:Configuration=Release
 
       - name: Find generated DACPAC (debug)
         shell: pwsh
