--- a/.github/workflows/deploy_DWH_Staging.yml
+++ b/.github/workflows/deploy_DWH_Staging.yml
@@ -27,14 +27,20 @@ jobs:
         run: |
           & "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\MSBuild\Current\Bin\MSBuild.exe" `
           ".\GithubAction\DWH_Staging\DWH_Staging.sqlproj" `
-          /t:Clean;Build /p:Configuration=Release /v:m /bl:DWH_Staging.binlog `
+          "/t:Clean;Build" `
+          /p:Configuration=Release `
+          /v:m `
+          "/bl:DWH_Staging.binlog" `
           /p:VSINSTALLDIR="C:\Program Files\Microsoft Visual Studio\2022\Enterprise\" `
           /p:SQLDBExtensionsRefPath="C:\Program Files\Microsoft Visual Studio\2022\Enterprise\Common7\IDE\Extensions\Microsoft\SQLDB" `
           /p:DacPacRootPath="C:\Program Files\Microsoft Visual Studio\2022\Enterprise\Common7\IDE\Extensions\Microsoft\SQLDB\DAC"
           
           & "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\MSBuild\Current\Bin\MSBuild.exe" `
           ".\GithubAction\DWH_ETL\DWH_ETL.sqlproj" `
-          /t:Clean;Build /p:Configuration=Release /v:m /bl:DWH_ETL.binlog `
+          "/t:Clean;Build" `
+          /p:Configuration=Release `
+          /v:m `
+          "/bl:DWH_Staging.binlog" ``
           /p:VSINSTALLDIR="C:\Program Files\Microsoft Visual Studio\2022\Enterprise\" `
           /p:SQLDBExtensionsRefPath="C:\Program Files\Microsoft Visual Studio\2022\Enterprise\Common7\IDE\Extensions\Microsoft\SQLDB" `
           /p:DacPacRootPath="C:\Program Files\Microsoft Visual Studio\2022\Enterprise\Common7\IDE\Extensions\Microsoft\SQLDB\DAC"
