--- a/.github/workflows/deploy_DWH_Staging.yml
+++ b/.github/workflows/deploy_DWH_Staging.yml
@@ -30,6 +30,7 @@ jobs:
               "/t:Clean;Build",
               "/p:Configuration=Release",
               "/v:m",
+              "/bl:DWH.binlog",
               "/p:VSINSTALLDIR=C:\Program Files\Microsoft Visual Studio\2022\Enterprise\",
               "/p:SQLDBExtensionsRefPath=C:\Program Files\Microsoft Visual Studio\2022\Enterprise\Common7\IDE\Extensions\Microsoft\SQLDB",
               "/p:DacPacRootPath=C:\Program Files\Microsoft Visual Studio\2022\Enterprise\Common7\IDE\Extensions\Microsoft\SQLDB\DAC"
